--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
       "php": ">=5.6.0"
     },
     "require-dev": {
-      "phpunit/phpunit": "^4.8 || ^5.4"
+      "phpunit/phpunit": "5.7"
     },
     "scripts": {
       "test": "./vendor/bin/phpunit"
