--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,1 +1,3 @@
-repo_token: vCQPWaei9JCxfsEqu4pwvRTSfYkVIYIwO
+coverage_clover: tests/logs/clover.xml
+json_path: tests/logs/coveralls-upload.json
+service_name: travis-ci
