--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ install:
   - composer install --no-interaction
 script:
   - composer test
+  - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
+after_script:
+  - php vendor/bin/coveralls -v
