--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,3 +1,1 @@
-coverage_clover: tests/logs/clover.xml
-json_path: tests/logs/coveralls-upload.json
-service_name: travis-ci
+COVERALLS_REPO_TOKEN:8YMIyqo3JAREhophQceVD3LdcWe5PlzHG
